--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,17 @@
+h1 {
+  padding-top: 20px;
+}
+
+p {
+  font-size: 20px;
+}
+
+label {
+  font-size: 18px;
+}
 
 header {
-  background: #42A5F5;
+  background: #5755d9;
   color: white;
   padding: 10px;
 }
@@ -11,4 +22,9 @@ header {
 
 .container {
   background-color: FAFAFA;
+}
+
+footer {
+  padding: 20px;
+  background-color: #5755d9;
 }
